--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; url=https://example.com" />
+  <meta http-equiv="refresh" content="0; url=https://discord.gg/JvJXu7c899" />
   <title>Redirecting...</title>
   <script>
     // Fallback redirect in case meta refresh doesn't work
@@ -10,6 +10,6 @@
   </script>
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="https://example.com">click here</a>.</p>
+  <p>If you are not redirected automatically, <a href="https://discord.gg/JvJXu7c899">click here</a>.</p>
 </body>
 </html>
