--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Redirecting...</title>
   <script>
     // Fallback redirect in case meta refresh doesn't work
-    window.location.href = "https://example.com";
+    window.location.href = "https://discord.gg/JvJXu7c899";
   </script>
 </head>
 <body>
