--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; url=https://discord.gg/JvJXu7c899" />
-  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="5; url=https://discord.gg/JvJXu7c899" />
+  <title>Obsidian Client</title>
+
+  <!-- Open Graph / Discord Embed -->
+  <meta property="og:title" content="Obsidian Client Discord Server!" />
+  <meta property="og:description" content="Click to join our Discord community. we're waiting for you!" />
+  <meta property="og:url" content="obsidianclient.netlify.app" />
+  <meta property="og:image" content="https://obsidian-client.netlify.app/bgc.gif" />
+  <meta property="og:type" content="website" />
+  <meta name="theme-color" content="#5865F2" />
+
+  <!-- JS Fallback -->
   <script>
-    // Fallback redirect in case meta refresh doesn't work
-    window.location.href = "https://discord.gg/JvJXu7c899";
+    setTimeout(() => {
+      window.location.href = "https://discord.gg/JvJXu7c899";
+    }, 5000);
   </script>
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="https://discord.gg/JvJXu7c899">click here</a>.</p>
+  <h1>Redirecting to our Discord...</h1>
+  <p>If you're not redirected, <a href="https://discord.gg/JvJXu7c899">click here</a>.</p>
 </body>
 </html>
