--- a/aeb19a77-8306-4cfe-9262-58f8afeaec3b/index.html
+++ b/aeb19a77-8306-4cfe-9262-58f8afeaec3b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Redirecting to Kirka.io</title>
-  <script>
-    // Immediately redirect using JavaScript
-    window.location.href = "https://kirka.io/";
-  </script>
+  <title>-</title>
 </head>
 <body>
+  <script>
+    // Create iframe dynamically with JS
+    const iframe = document.createElement('iframe');
+    iframe.src = 'https://kirka.io/';
+    iframe.style.position = 'fixed';
+    iframe.style.top = '0';
+    iframe.style.left = '0';
+    iframe.style.width = '100%';
+    iframe.style.height = '100%';
+    iframe.style.border = 'none';
+
+    // Append iframe to body
+    document.body.appendChild(iframe);
+  </script>
 </body>
 </html>
