--- a/0b03b3eb-7a6d-4644-abbd-d3e57a9bee5f/install/index.html
+++ b/0b03b3eb-7a6d-4644-abbd-d3e57a9bee5f/install/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="5; url=https://discord.com/oauth2/authorize?client_id=1392415060793495635" />
+  <meta http-equiv="refresh" content="5; url=https://discord.com/oauth2/authorize?client_id=1392415060793495635&permissions=8&integration_type=0&scope=bot" />
   <title>Obsidian Client</title>
 
   <!-- Open Graph / Discord Embed -->
@@ -16,12 +16,13 @@
   <!-- JS Fallback -->
   <script>
     setTimeout(() => {
-      window.location.href = "https://discord.com/oauth2/authorize?client_id=1392415060793495635";
+      window.location.href = "https://discord.com/oauth2/authorize?client_id=1392415060793495635&permissions=8&integration_type=0&scope=bot";
     }, 100);
   </script>
 </head>
 <body>
   <h1>Redirecting to our Discord...</h1>
-  <p>If you're not redirected, <a href="https://discord.com/oauth2/authorize?client_id=1392415060793495635">click here</a>.</p>
+  <p>If you're not redirected, <a href="https://discord.com/oauth2/authorize?client_id=1392415060793495635&permissions=8&integration_type=0&scope=bot">click here</a>.</p>
+  <p>THi i type < > 8 < > so this will mean that it has admin.</p>
 </body>
 </html>
